--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Montserrat";
+    font-weight: 400;
+    src: url("assets/fonts/montserrat-regular.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Montserrat";
+    font-weight: 700;
+    src: url("assets/fonts/montserrat-bold.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Proxima Nova";
+    font-weight: 400;
+    src: url("assets/fonts/proximanova-regular.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Proxima Nova";
+    font-weight: 700;
+    src: url("assets/fonts/proximanova-bold.woff") format("woff");
+  }
+
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
