--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,12 @@
 
   @font-face {
     font-family: "Proxima Nova";
+    font-weight: 600;
+    src: url("assets/fonts/proximanova-semibold.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Proxima Nova";
     font-weight: 700;
     src: url("assets/fonts/proximanova-bold.woff") format("woff");
   }
